# mercari-build-training-2023

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: build.yml
db/: .gitignore  items.db  make_itemdb.py
document/: 01-git.en.md  01-git.ja.md  03-api.en.md  04-database.en.md  05-docker.en.md  07-frontend.en.md  08-docker-compose.en.md
go/: Dockerfile  go.mod
go/app/: items.json  main.go
go/app/db/: sqlite.go
go/app/sql/: mercari.sqlite3
go/db/: items.db  sqlite.go
python/: .gitignore  Dockerfile  items.json  main.py  pyproject.toml
python/db/: mercari.sqlite3
typescript/simple-mercari-web/: Dockerfile  package-lock.json  package.json
typescript/simple-mercari-web/src/: App.css  App.tsx
typescript/simple-mercari-web/src/components/ItemList/: ItemList.css  ItemList.tsx
typescript/simple-mercari-web/src/components/Listing/: Listing.tsx
