[tool.poetry]
name = "mercari-webapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mercari_webapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = ">=0.75", extras = ["all"]}
uvicorn = {version = ">=0.15", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
